indus/test/test_examples/type_errors/for.tpc
tele bool[10] l;
init {
    for (x in l) { 
       x = 5; 
    }
} 
telemetry {} 
check {}